--- a/resources/assets/sass/_prize-modal.scss
+++ b/resources/assets/sass/_prize-modal.scss
@@ -9,7 +9,7 @@
 	background: rgba(0,0,0, 0.9);
 	transition: transform 0.2s ease;
 	transform: translate3d(-100%, 0, 0);
-	overflow: hidden;
+	overflow: scroll;
 	color: $color-white;
 	text-align: center;
 
